--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
+<!DOCTYPE html>
 <html>
-	<body>
-		<a href="pool.html">pool</a>
-	</body>
+        <head>
+                <title>Pool League - Rochester Wednesdays AA 4009</title>
+                <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+                <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-k2/8zcNbxVIh5mnQ52A0r3a6jAgMGxFJFE2707UxGCk= sha512-ZV9KawG2Legkwp3nAlxLIVFudTauWuBpC10uEafMHYL0Sarrz5A7G79kXh5+5+woxQ5HM559XX2UZjMJ36Wplg==" crossorigin="anonymous">
+        </head>
+        <body>
+                <h1>Rochester Pool Leagues</h1>
+                <div class="list-group">
+
+                  <a href="pool.html" class="list-group-item list-group-item-success">
+                    <h4 class="list-group-item-heading">Rochester Pool Leagues</h4>
+                    <p class="list-group-item-text">
+                        Access to standings and schedule for Rochester Pool Leagues - via DNRStar!
+                    </p>
+                  </a>
+                </div>
+        </body>
 </html>
