--- a/pool.html
+++ b/pool.html
@@ -1,129 +1,11 @@
 <!DOCTYPE html>
 <html>
         <head>
-                <meta charset="utf-8">
-                <meta http-equiv="X-UA-Compatible" content="IE=edge">
-                <meta name="viewport" content="width=device-width, initial-scale=1">
-                <title>Pool League - Rochester Wednesdays AA 4009</title>
-                <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-                <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-                <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha256-k2/8zcNbxVIh5mnQ52A0r3a6jAgMGxFJFE2707UxGCk= sha512-ZV9KawG2Legkwp3nAlxLIVFudTauWuBpC10uEafMHYL0Sarrz5A7G79kXh5+5+woxQ5HM559XX2UZjMJ36Wplg==" crossorigin="anonymous">
+            <script>
+                window.location = "http://topshots.me/leagues.php?id=12";
+            </script>
         </head>
         <body>
-                <h1>Rochester Pool Leagues</h1>
-                <div class="list-group">
-
-                  <div class="list-group-item list-group-item-success">
-                    <h4 class="list-group-item-heading">Rochester Wednesdays AA 4009</h4>
-                    <p class="list-group-item-text">
-                        <div class="btn-group btn-group-lg" role="group" aria-label="Rochester Wednesdays AA 4009 PDFs">
-                                <a href="http://dnrstar.com/pool/pool_files/plschd4009.pdf" class="btn btn-default">Schedule</a>
-                                <a href="http://dnrstar.com/pool/pool_files/plstnd4009.pdf" class="btn btn-primary">Standings</a>
-                        </div>
-                    </p>
-                  </div>
-
-                  <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Rochester Tuesday 4-Person A1</h4>
-                    <p class="list-group-item-text">
-                        <div class="btn-group btn-group-lg" role="group" aria-label="4005 PDFs">
-                                <a href="http://dnrstar.com/pool/pool_files/plschd4005.pdf" class="btn btn-default">Schedule</a>
-                                <a href="http://dnrstar.com/pool/pool_files/plstnd4005.pdf" class="btn btn-primary">Standings</a>
-                        </div>
-                    </p>
-                  </div>
-
-                  <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Rochester Tuesday 4-Person B1</h4>
-                    <p class="list-group-item-text">
-                        <div class="btn-group btn-group-lg" role="group" aria-label="4007 PDFs">
-                                <a href="http://dnrstar.com/pool/pool_files/plschd4007.pdf" class="btn btn-default">Schedule</a>
-                                <a href="http://dnrstar.com/pool/pool_files/plstnd4007.pdf" class="btn btn-primary">Standings</a>
-                        </div>
-                    </p>
-                  </div>
-
-                  <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Rochester Tuesdays 4-PERSON B2 (4006)</h4>
-                    <p class="list-group-item-text">
-                        <div class="btn-group btn-group-lg" role="group" aria-label="4006 PDFs">
-                                <a href="http://dnrstar.com/pool/pool_files/plschd4006.pdf" class="btn btn-default">Schedule</a>
-                                <a href="http://dnrstar.com/pool/pool_files/plstnd4006.pdf" class="btn btn-primary">Standings</a>
-                        </div>
-                    </p>
-                  </div>
-
-                  <div class="list-group-item list-group-item-success">
-                    <h4 class="list-group-item-heading">Rochester Wednesdays AA 4009</h4>
-                    <p class="list-group-item-text">
-                        <div class="btn-group btn-group-lg" role="group" aria-label="Rochester Wednesdays AA 4009 PDFs">
-                                <a href="http://dnrstar.com/pool/pool_files/plschd4009.pdf" class="btn btn-default">Schedule</a>
-                                <a href="http://dnrstar.com/pool/pool_files/plstnd4009.pdf" class="btn btn-primary">Standings</a>
-                        </div>
-                    </p>
-                  </div>
-
-                  <div class="list-group-item list-group-item-success">
-                    <h4 class="list-group-item-heading">Rochester Wednesdays 5-PERSON B1 &amp; B2 (4011)</h4>
-                    <p class="list-group-item-text">
-                        <div class="btn-group btn-group-lg" role="group" aria-label="4011 PDFs">
-                                <a href="http://dnrstar.com/pool/pool_files/plschd4011.pdf" class="btn btn-default">Schedule</a>
-                                <a href="http://dnrstar.com/pool/pool_files/plstnd4011.pdf" class="btn btn-primary">Standings</a>
-                        </div>
-                    </p>
-                  </div>
-
-                  <div class="list-group-item list-group-item-success">
-                    <h4 class="list-group-item-heading">Rochester Wednesdays 5-PERSON A1 &amp;A2 (4012)</h4>
-                    <p class="list-group-item-text">
-                        <div class="btn-group btn-group-lg" role="group" aria-label="4012 PDFs">
-                                <a href="http://dnrstar.com/pool/pool_files/plschd4012.pdf" class="btn btn-default">Schedule</a>
-                                <a href="http://dnrstar.com/pool/pool_files/plstnd4012.pdf" class="btn btn-primary">Standings</a>
-                        </div>
-                    </p>
-                  </div>
-
-                  <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Rochester Thursdays 5-PERSON A2 (4013)</h4>
-                    <p class="list-group-item-text">
-                        <div class="btn-group btn-group-lg" role="group" aria-label="4013 PDFs">
-                                <a href="http://dnrstar.com/pool/pool_files/plschd4013.pdf" class="btn btn-default">Schedule</a>
-                                <a href="http://dnrstar.com/pool/pool_files/plstnd4013.pdf" class="btn btn-primary">Standings</a>
-                        </div>
-                    </p>
-                  </div>
-
-                  <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Rochester Thursdays 5 PERSON B1/B2 (4014)</h4>
-                    <p class="list-group-item-text">
-                        <div class="btn-group btn-group-lg" role="group" aria-label="4014 PDFs">
-                                <a href="http://dnrstar.com/pool/pool_files/plschd4014.pdf" class="btn btn-default">Schedule</a>
-                                <a href="http://dnrstar.com/pool/pool_files/plstnd4014.pdf" class="btn btn-primary">Standings</a>
-                        </div>
-                    </p>
-                  </div>
-
-                  <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Rochester Thursdays 5-PERSON A1 (4015)</h4>
-                    <p class="list-group-item-text">
-                        <div class="btn-group btn-group-lg" role="group" aria-label="4015 PDFs">
-                                <a href="http://dnrstar.com/pool/pool_files/plschd4015.pdf" class="btn btn-default">Schedule</a>
-                                <a href="http://dnrstar.com/pool/pool_files/plstnd4015.pdf" class="btn btn-primary">Standings</a>
-                        </div>
-                    </p>
-                  </div>
-
-                  <div class="list-group-item">
-                    <h4 class="list-group-item-heading">Rochester Thursdays 5-PERSON AA (4017)</h4>
-                    <p class="list-group-item-text">
-                        <div class="btn-group btn-group-lg" role="group" aria-label="4017 4-PERSON B2 (4006)PDFs">
-                                <a href="http://dnrstar.com/pool/pool_files/plschd4017.pdf" class="btn btn-default">Schedule</a>
-                                <a href="http://dnrstar.com/pool/pool_files/plstnd4017.pdf" class="btn btn-primary">Standings</a>
-                        </div>
-                    </p>
-                  </div>
-
-                </div>
-                
+            <a href="http://topshots.me/leagues.php?id=12">Redirect to new page</a>
         </body>
 </html>
