--- a/pool.html
+++ b/pool.html
@@ -2,10 +2,10 @@
 <html>
         <head>
             <script>
-                window.location = "http://topshots.me/leagues.php?id=12";
+                window.location = "https://topshots.me/leagues.php?id=ROCHESTER";
             </script>
         </head>
         <body>
-            <a href="http://topshots.me/leagues.php?id=12">Redirect to new page</a>
+            <a href="https://topshots.me/leagues.php?id=ROCHESTER">Redirect to new page</a>
         </body>
 </html>
